# Discrete-Signal-Tonality

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: .gitignore  ft_investigation.py
docs/external_supporting/famous_white_papers/: .gitignore
docs/images/: .$tonnetze.drawio.bkp  diagrams.drawio  tonnetze.drawio
docs/tex/: dissig.tex
docs/tex/bib/: dissig.bib
src/dissig/: __init__.py  core.py
src/dissig/fourier/: __init__.py  fftonnetz.py
src/dissig/io/: __init__.py  from_wav.py  print_wav.py
src/dissig/signals/: __init__.py  discrete.py
src/dissig/tonnetze/: __init__.py  network.py  networks.py  visualizers.py
src/dissig/utils/: __init__.py  arithmetic.py  primes.py  print_sound.py
tests/fourier/: test_fftonnetz.py
tests/io/: make_sigtonnetz_print.py  test_from_wav.py  test_print_wav.py
tests/signals/: test_discrete.py
tests/tonnetze/: make_tonnetze.py  test_network.py  test_networks.py  test_visualizers.py
tests/utils/: test_arithmetic.py  test_primes.py  test_print_sound.py
