[project]
name = "dissig"
version = "0.1.0"
dependencies = ["pylint>=3.3.7", "pytest>=8.4.0", "numpy>=2.3.0", "torch>=2.7.1"]
description = "Default template for PDM package"
authors = [
    {name = "TYLERSFOSTER", email = "tylerisnotavailable@gmail.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
packages = ["dissig"]
package-dir = {"" = "src"}

[tool.pdm]
distribution = false
