[project]
name = "dissig"
version = "0.1.0"
dependencies = [
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "numpy>=2.3.0",
    "torch>=2.7.1",
    "pytest-pythonpath>=0.7.3",
    "tqdm>=4.67.1",
    "pandas>=2.3.0",
    "networkx>=3.5",
    "matplotlib>=3.10.3",
    "pygraphviz>=1.14",
    "pyvis>=0.3.2",
    "scipy>=1.15.3",
    "pip>=25.1.1",
]
description = "Default template for PDM package"
authors = [
    {name = "TYLERSFOSTER", email = "tylerisnotavailable@gmail.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
packages = ["dissig"]
package-dir = {"" = "src"}

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
